amarrando o telefone ao usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 
-server.servlet.context-path=/cursospringrestapi
+#server.servlet.context-path=/cursospringrestapi
 
 server.port = 8075
